# askman

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  mvp-examples.json
.agents/: benchmark_prompt.md
.agents/skills/: askman.md
.agents/skills/syntax-retriever/: SKILL.md
.github/workflows/: release.yml
src/: cli.rs  db.rs  embed.rs  format.rs  import_tldr.rs  lib.rs  main.rs  search.rs  update.rs
