[package]
name = "askman"
version = "0.1.0"
edition = "2024"
description = "A simple, offline CLI tool to help you use Unix/Linux terminal commands more easily."
license = "MIT"
repository = "https://github.com/cito-lito/askman"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
