[package]
name = "askman"
version = "0.1.0"
edition = "2024"
description = "A simple, offline CLI tool to help you use Unix/Linux terminal commands more easily."
license = "MIT"
repository = "https://github.com/cito-lito/askman"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
fastembed = "4.8.0"
rayon = "1.10.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite-vec = "0.1.6"
zerocopy = "0.8.25"


[[bin]]
name = "askman"
path = "src/main.rs"

[[bin]]
name = "import_tldr"
path = "src/import_tldr.rs"
